# local-operator

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
config/: default.toml
migrations/: 0001_init.sql  0002_op_tasks.sql  0003_contexts.sql  0004_op_task_input_json.sql  0005_artifact_content.sql  0006_employment.sql  0007_employment_source_artifact_index.sql  0008_profiles.sql  0009_profile_criteria.sql  0010_employment_scoring_outputs.sql  0011_seed_job_profile.sql  0012_task_requests.sql  0013_chat_sessions.sql  0014_chat_messages.sql  0015_task_links.sql
operator-console/: README.md  index.html  package-lock.json  package.json
operator-console/src/: App.jsx
src/: app_state.rs  app_states.rs  config.rs  error.rs  main.rs  session_memory.rs
src/adapters/: home_assistant.rs  llm.rs  mod.rs  openai_escalation.rs
src/context/: mod.rs  models.rs  repository.rs  service.rs
src/db/: audit_repo.rs  mod.rs
src/domains/: catalog.rs  mod.rs
src/models/: api.rs  audit.rs  home_assistant.rs  llm.rs  mod.rs  plan.rs  policy.rs  session.rs  tool.rs
src/op_tasks/: mod.rs  models.rs  planner.rs  repository.rs  runner.rs  service.rs
src/readers/: mod.rs  models.rs  search.rs  service.rs  web_reader.rs
src/routes/: artifacts.rs  audit.rs  auth.rs  context.rs  domains.rs  employment.rs  mod.rs  op_tasks.rs  openai_compat.rs  openapi.rs  operator.rs  status.rs  task_requests.rs
src/services/: audit_service.rs  escalation_safety.rs  execution.rs  llm_router.rs  llm_service.rs  mod.rs  operator_service.rs  planner.rs  policy_engine.rs
src/tools/: docker.rs  (+4 more)
(+9 files in other folders)
